overflow-x fix

--- a/src/app/+authenticated/+chat/chat.component.css
+++ b/src/app/+authenticated/+chat/chat.component.css
@@ -23,6 +23,7 @@
   flex: 1;
   flex-direction: column;
   overflow-y: auto;
+  overflow-x: hidden;
   word-break: break-all;
   word-wrap: break-word;
 }
